# jira-gram

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  RESTRUCTURING.md  app.json  bot_handlers.py  config.py  jira_client.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: coding-quality.yml  tests.yaml
src/jira_gram/: __init__.py  config.py  main.py
src/jira_gram/bot/: __init__.py  auth.py  handlers.py
src/jira_gram/jira/: __init__.py  client.py
tests/: __init__.py  conftest.py  test_auth.py  test_bot_handlers.py  test_config.py  test_jira_client.py
